--- a/app-android/res/values/strings.xml
+++ b/app-android/res/values/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">imemory</string>
+    <string name="button">点我你就成功了</string>
 </resources>
