--- a/app-android/res/values/strings.xml
+++ b/app-android/res/values/strings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">memmo</string>
-    <string name="button">点我你就成功了</string>
+    <string name="app_name">萌好瞬间</string>
+    <string name="no_album_text">还没有任何记忆相册哦</string>
+    <string name="create_album_button">马上建一个！</string>
 </resources>
