--- a/app-android/res/values/strings.xml
+++ b/app-android/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="app_name">萌好瞬间</string>
     <string name="no_album_text">还没有任何记忆相册哦</string>
     <string name="create_album_button">马上建一个！</string>
+    <string name="take_picture">Take a Picture</string>
+    <string name="cannot">CANNOT</string>
 </resources>
