--- a/app-android/res/values/strings.xml
+++ b/app-android/res/values/strings.xml
@@ -7,5 +7,9 @@
     <string name="set_notification_button">设定拍照提醒！</string>
     <string name="take_picture">Take a Picture</string>
     <string name="cannot">CANNOT</string>
+    <string name="remark">备注</string>
+    <string name="album_name">名称</string>
+    <string name="reminder">提醒</string>
+    <string name="album_create_button">确定</string>
 
 </resources>
