--- a/app-android/res/values/strings.xml
+++ b/app-android/res/values/strings.xml
@@ -9,8 +9,12 @@
     <string name="cannot">CANNOT</string>
     <string name="remark">备注</string>
     <string name="album_name">名称</string>
-    <string name="reminder">提醒</string>
+    <string name="reminder_text">提醒</string>
     <string name="album_create_button">确定</string>
     <string name="no_notification">还没有任何拍照提醒哦</string>
+    <string name="create_button_text">创建</string>
+    <string name="edit_button_text">编辑</string>
+    <string name="return_back_text">返回</string>
+    <string name="take_photo_text">拍照</string>
 
 </resources>
