--- a/app-android/res/values/strings.xml
+++ b/app-android/res/values/strings.xml
@@ -1,21 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">萌好瞬间</string>
-    <string name="no_album_text">还没有任何记忆相册哦！</string>
-    <string name="create_album_button">马上建一个！</string>
-    <string name="album_list_button">相册列表！</string>
-    <string name="set_notification_button">设定拍照提醒！</string>
-    <string name="take_picture">Take a Picture</string>
-    <string name="cannot">CANNOT</string>
-    <string name="remark">备注</string>
-    <string name="album_name">名称</string>
-    <string name="reminder_text">提醒</string>
-    <string name="album_create_button">确定</string>
-    <string name="no_notification">还没有任何拍照提醒哦</string>
-    <string name="create_button_text">创建</string>
-    <string name="edit_button_text">编辑</string>
-    <string name="return_back_text">返回</string>
-    <string name="take_photo_text">拍照</string>
-    <string name="take_photo_reminder_text">拍照提醒已设定于每天的</string>
+    <!--Common-->
+    <string name="app_name">Memmo</string>
 
+    <string name="ok">OK</string>
+    <string name="edit">Edit</string>
+    <string name="back">Back</string>
+
+    <!--Messages-->
+    <string name="msg_no_alarm">No Alarm</string>
+    <string name="msg_reminder_notification">Reminder Text</string>
+
+    <!--Buttons-->
+    <string name="btn_create">Create</string>
+
+    <!--Labels-->
+    <string name="lbl_remark">Remark</string>
+    <string name="lbl_album_name">Album Name</string>
+
+    <!--Menu-->
+    <string name="menu_take_photo">Take Photo</string>
+    <string name="menu_reminder">Reminder</string>
 </resources>
