--- a/app-android/res/values-zh/strings.xml
+++ b/app-android/res/values-zh/strings.xml
@@ -9,7 +9,7 @@
 
     <!--Messages-->
     <string name="msg_no_alarm">还没有任何拍照提醒哦</string>
-    <string name="msg_reminder_notification">拍照提醒已设定于每天的</string>
+    <string name="msg_reminder_notification">拍照提醒已设定于</string>
 
     <!--Buttons-->
     <string name="btn_create">创建</string>
