--- a/app-android/res/values/strings.xml
+++ b/app-android/res/values/strings.xml
@@ -9,7 +9,7 @@
 
     <!--Messages-->
     <string name="msg_no_alarm">No Alarm</string>
-    <string name="msg_reminder_notification">Reminder Text</string>
+    <string name="msg_reminder_notification">Reminder is set at</string>
 
     <!--Buttons-->
     <string name="btn_create">Create</string>
