--- a/app-android/res/values-zh/strings.xml
+++ b/app-android/res/values-zh/strings.xml
@@ -24,7 +24,7 @@
 
     <!--Exit-->
     <string name="exit_title">信息提示</string>
-    <string name="exit_msg">确定要萌好瞬间吗</string>
+    <string name="exit_msg">确定退出萌好瞬间吗</string>
     <string name="exit_ok">确定</string>
     <string name="exit_cancel">取消</string>
 </resources>
