--- a/app-android/res/values/strings.xml
+++ b/app-android/res/values/strings.xml
@@ -33,4 +33,8 @@
     <string name="reminder_set_day_title">Set day</string>
     <string name="reminder_set_day_done">Done</string>
 
+    <!--Delete-->
+    <string name="delete_album_title">Delete Album</string>
+    <string name="delete_album_message">Are you sure you want to delete this album?</string>
+
 </resources>
